visualizer/src/style/_timeline.scss
@import "colors";

$tl-height: 15px;

#tl-bar-background {
    background-color: $cl-light-tl-bar-idle;
    width: 100%; 
    height: $tl-height;
    padding: 0;
    cursor: pointer;
    position: relative;
}

#tl-bar-buffered {
    z-index: 0;
    width: 30%;
    position: absolute;
    height: $tl-height;
    background-color: $cl-light-tl-bar-buffered;
    pointer-events: none;
}

#tl-bar-colored {
    z-index: 1;
    width: 15%;
    position: absolute;
    height: $tl-height;
    background-color: $cl-light-tl-bar-colored;
    pointer-events: none;
}

#tl-bar-ghost {
    z-index: 2;
    width: 2px;
    position: absolute;
    height: $tl-height;
    background-color: $cl-light-tl-bar-ghost;
    pointer-events: none;
}

#tl-bar-active {
    z-index: 3;
    width: 2px;
    position: relative;
    height: $tl-height;
    background-color: $cl-light-tl-bar-current;
    pointer-events: none;
}

#timeline-moment-indicator-canvas {
    height: 15px;
    width: 100%;
    display: block;
}

.tl-mom-indicator {
    background-color: $cl-light-tl-bar-idle;
}

.tl-control-sides {
    flex: 1 1 40%
}

.tl-control-center {
    flex: 1 1 20%;
}

